# codex-test

./: .gitignore  AGENTS.md  README.md  pyproject.toml
assets/: METADATA.md
docs/: environment.md
scripts/: dev.codex.ps1  dev.codex.sh  dev.ps1  dev.sh  setup.ps1  test.ps1  test.sh
tests/: test_agentlab_package.py
tests/fixtures/: __init__.py
